fixed visibility of text when hovering over gallery

--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,5 +1,10 @@
+#imageHover:hover+#galleryDesc{
+    background-color: #135DD8;  
+    display:block
+}
+
 #imageHover:hover{
-    filter:blur(8px);
+    filter:blur(10px);
 }
 
 #imageHover{
@@ -18,9 +23,14 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    width: 80%;
+    width: 100%;
     padding: 20px;
     text-align: center;
     color:black;
     pointer-events:none;
+    display: none;
 }
+/* #galleryDesc:hover{
+    
+    color:white;
+} */
